corrected an error with the navbar height causing an issue with the header BG not appearing behind the nav when the VW is less than 600px

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -40,10 +40,6 @@ body {
     grid-template-rows: auto auto auto auto;
 
     min-height: 100vh;
-
-    @media (width <= 600px) {
-        grid-template-rows: 3.5rem auto auto auto;
-    }
 }
 
 nav {
